--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="images/dish-1.jpg" alt="">
-            <h3>Basmati Jellof Rice</h3>
+            <h3>Party Jellof Rice</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
