--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="images/dish-7.png" alt="">
-            <h3>Okra Soup</h3>
+            <h3>Vegetable Soup</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
