--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
     <div class="box-container">
         <div class="box">          
-            <h3>Party Jellof Rice</h3>            
+            <h3>Basmati Jellof Rice</h3>            
             <span>₦600</span>            
         </div>
 
@@ -541,9 +541,9 @@
             <h3>Chicken</h3>            
             <span>₦1000</span>            
         </div>
-        
+
         <div class="box">          
-            <h3>Chicken (Small)</h3>            
+            <h3>Chicken Small</h3>            
             <span>₦700</span>            
         </div>
 
@@ -591,6 +591,7 @@
             <h3>Shrimp in Pepper Sauce</h3>
             <span>₦1000</span>            
         </div>
+
         
         <div class="box">         
             <h3>Gizzard Sauce</h3>
