--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
     <div class="box-container">
         <div class="box">          
-            <h3>Basmati Jellof Rice</h3>            
+            <h3>Party Jellof Rice</h3>            
             <span>₦600</span>            
         </div>
 
@@ -543,7 +543,7 @@
         </div>
 
         <div class="box">          
-            <h3>Chicken Small</h3>            
+            <h3>Chicken (Small)</h3>            
             <span>₦700</span>            
         </div>
 
@@ -794,9 +794,9 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>Basmati Jellof Rice</h3>
+                <h3>Party Jellof Rice</h3>
                 <p>
-                    Our Explore Taste Basmati Jellof Rice will surely give you a delicious spark that your taste buds will not forget in a hurry.
+                    Our Explore Taste Party Jellof Rice will surely give you a delicious spark that your taste buds will not forget in a hurry.
                 </p>
                 <a href="#" class="btn">Order Now</a>
             </div>
