--- a/menu.html
+++ b/menu.html
@@ -89,35 +89,40 @@
                               <tr>
                                 <th scope="row">4</th>
                                 <td>PURE HEAVEN</td>
-                                <td>2,500</td>
+                                <td>3,000</td>
                               </tr>
                               <tr>
                                 <th scope="row">5</th>
+                                <td>PURE HEAVEN (Can)</td>
+                                <td>1,000</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">6</th>
                                 <td>CHI EXOTIC</td>
                                 <td>1,200</td>
                               </tr>
                               <tr>
-                                <th scope="row">6</th>
+                                <th scope="row">7</th>
                                 <td>CHIVITA</td>
                                 <td>1,200</td>
                               </tr>
                               <tr>
-                                <th scope="row">7</th>
+                                <th scope="row">8</th>
                                 <td>CRANBERRY JUICE</td>
                                 <td>2,500</td>
                               </tr>
                               <tr>
-                                <th scope="row">8</th>
+                                <th scope="row">9</th>
                                 <td>HOLLANDIA</td>
                                 <td>1,200</td>
                               </tr>
                               <tr>
-                                <th scope="row">9</th>
+                                <th scope="row">10</th>
                                 <td>SOFT DRINKS</td>
                                 <td>300</td>
                               </tr>
                               <tr>
-                                <th scope="row">9</th>
+                                <th scope="row">11</th>
                                 <td>WATER</td>
                                 <td>200</td>
                               </tr>
@@ -534,26 +539,21 @@
                             </tr>
                             <tr>
                             <th scope="row">2</th>
-                            <td>DOUBLE BLACK</td>
-                            <td>800</td>
-                            </tr>
-                            <tr>
-                            <th scope="row">3</th>
                             <td>CLIMAX</td>
                             <td>1,000</td>
                             </tr>
                             <tr>
-                            <th scope="row">4</th>
+                            <th scope="row">3</th>
                             <td>MONSTER</td>
                             <td>1,000</td>
                             </tr>
                             <tr>
-                            <th scope="row">5</th>
+                            <th scope="row">4</th>
                             <td>RED BULL</td>
                             <td>1,000</td>
                             </tr>
                             <tr>
-                            <th scope="row">6</th>
+                            <th scope="row">5</th>
                             <td>POWER HORSE</td>
                             <td>1,000</td>
                             </tr>                            
@@ -596,7 +596,12 @@
                             <th scope="row">3</th>
                             <td>BEST CREAM</td>
                             <td>6,000</td>
-                            </tr>                       
+                            </tr>
+                            <tr>
+                            <th scope="row">4</th>
+                            <td>SHISHA</td>
+                            <td>3,000</td>
+                            </tr>
                         </tbody>
                         </table>
                     </div>
@@ -711,7 +716,12 @@
                             <th scope="row">8</th>
                             <td>EXPLORE TILAPIA WITH FRIES</td>
                             <td>3,500</td>
-                            </tr>    
+                            </tr>
+                            <tr>
+                            <th scope="row">9</th>
+                            <td>PEPPERED MEAT WITH YAM CHIPS</td>
+                            <td>1,600</td>
+                            </tr>
                         </tbody>
                         </table>
                     </div>
