--- a/menu.html
+++ b/menu.html
@@ -596,9 +596,19 @@
                             <th scope="row">3</th>
                             <td>BEST CREAM</td>
                             <td>6,000</td>
-                            </tr>
+                            </tr>                            
                             <tr>
                             <th scope="row">4</th>
+                            <td>WHISKEY SHOT</td>
+                            <td>500</td>
+                            </tr>                            
+                            <tr>
+                            <th scope="row">5</th>
+                            <td>VODKA SHOT</td>
+                            <td>500</td>
+                            </tr>
+                            <tr>
+                            <th scope="row">6</th>
                             <td>SHISHA</td>
                             <td>3,000</td>
                             </tr>
@@ -679,47 +689,52 @@
                         <tbody>
                             <tr>
                             <th scope="row">1</th>
-                            <td>EXPLORE TURKEY</td>
-                            <td>2,300</td>
+                            <td>EXPLORE SUYA</td>
+                            <td>500</td>
                             </tr>
                             <tr>
                             <th scope="row">2</th>
-                            <td>EXPLORE TURKEY WITH FRIES</td>
-                            <td>2,800</td>
+                            <td>EXPLORE TURKEY</td>
+                            <td>2,400</td>
                             </tr>
                             <tr>
                             <th scope="row">3</th>
-                            <td>EXPLORE CHICKEN THIGH</td>
-                            <td>2,000</td>
+                            <td>EXPLORE TURKEY WITH FRIES</td>
+                            <td>3,000</td>
                             </tr>
                             <tr>
                             <th scope="row">4</th>
-                            <td>EXPLORE CHICKEN THIGH WITH FRIES</td>
-                            <td>2,500</td>
+                            <td>EXPLORE CHICKEN LAP</td>
+                            <td>2,200</td>
                             </tr>
                             <tr>
                             <th scope="row">5</th>
+                            <td>EXPLORE CHICKEN LAP WITH FRIES</td>
+                            <td>2,800</td>
+                            </tr>
+                            <tr>
+                            <th scope="row">6</th>
                             <td>EXPLORE CHICKEN WINGS</td>
                             <td>1,500</td>
                             </tr>
                             <tr>
-                            <th scope="row">6</th>
+                            <th scope="row">7</th>
                             <td>EXPLORE CHICKEN WINGS WITH FRIES</td>
-                            <td>2,000</td>
+                            <td>2,100</td>
                             </tr>
                             <tr>
-                            <th scope="row">7</th>
+                            <th scope="row">8</th>
                             <td>EXPLORE TILAPIA</td>
                             <td>3,000</td>
                             </tr>
                             <tr>
-                            <th scope="row">8</th>
+                            <th scope="row">9</th>
                             <td>EXPLORE TILAPIA WITH FRIES</td>
-                            <td>3,500</td>
+                            <td>3,600</td>
                             </tr>
                             <tr>
-                            <th scope="row">9</th>
-                            <td>PEPPERED MEAT WITH YAM CHIPS</td>
+                            <th scope="row">10</th>
+                            <td>PEPPERED MEAT WITH FRIES/YAM CHIPS</td>
                             <td>1,600</td>
                             </tr>
                         </tbody>
@@ -807,7 +822,7 @@
                             <tr>
                             <th scope="row">1</th>
                             <td>EXTRA FRIES</td>
-                            <td>500</td>
+                            <td>600</td>
                             </tr>
                             <tr>
                             <th scope="row">2</th>
