--- a/menu.html
+++ b/menu.html
@@ -93,7 +93,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">5</th>
-                                <td>PURE HEAVEN (Can)</td>
+                                <td>PURE HEAVEN (CAN)</td>
                                 <td>1,000</td>
                               </tr>
                               <tr>
@@ -129,12 +129,12 @@
                                 <tr>
                                 <th scope="row">12</th>
                                 <td>FAROUZ</td>
-                                <td>200</td>
+                                <td>400</td>
                               </tr>
                                 <tr>
                                 <th scope="row">13</th>
                                 <td>AMSTEL MALT</td>
-                                <td>200</td>
+                                <td>400</td>
                               </tr>
                             </tbody>
                           </table>
@@ -731,7 +731,7 @@
                             <tr>
                             <th scope="row">7</th>
                             <td>ORIGIN BEER</td>
-                            <td>700</td>
+                            <td>600</td>
                             </tr>
                             <tr>
                             <th scope="row">8</th>
