--- a/menu.html
+++ b/menu.html
@@ -686,7 +686,7 @@
                     BEER
                     </button>
                 </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingEleven" data-bs-parent="#accordionExample">
+                <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                     <strong>BEER</strong> 
                     <table class="table">
@@ -800,12 +800,12 @@
 
             <!--ENERGY DRINK SECTION-->
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingEleven">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+                <h2 class="accordion-header" id="headingTwelve">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseEleven">
                     FOOD / MEAL MENU
                     </button>
                 </h2>
-                <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven" data-bs-parent="#accordionExample">
+                <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                     <strong>EXPLORE GRILLS</strong>
                     <table class="table">
