--- a/menu.html
+++ b/menu.html
@@ -240,12 +240,12 @@
                             <tr>
                             <th scope="row">2</th>
                             <td>SKKY</td>
-                            <td>11,000</td>
+                            <td>12,000</td>
                             </tr>
                             <tr>
                             <th scope="row">3</th>
                             <td>CIROC</td>
-                            <td>25,000</td>
+                            <td>37,000</td>
                             </tr>
                         </tbody>
                         </table>
@@ -275,102 +275,107 @@
                       <tr>
                         <th scope="row">1</th>
                         <td>BLACK LABEL</td>
-                        <td>22,000</td>
+                        <td>25,000</td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
                         <td>GOLD LABEL</td>
-                        <td>31,000</td>
+                        <td>37,000</td>
                       </tr>
                       <tr>
                         <th scope="row">3</th>
-                        <td>JACK DANIEL</td>
-                        <td>17,000</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">4</th>
                         <td>JAMESON</td>
                         <td>18,500</td>
                       </tr>
                       <tr>
-                        <th scope="row">5</th>
+                        <th scope="row">4</th>
                         <td>JAMESON (Black Barrel)</td>
                         <td>25,000</td>
                       </tr>
                       <tr>
-                        <th scope="row">6</th>
+                        <th scope="row">5</th>
                         <td>GLENFIDDICH 12yrs</td>
-                        <td>30,000</td>
+                        <td>40,000</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>GLENFIDDICH 15yrs</td>
+                        <td>60,000</td>
                       </tr>
                       <tr>
                         <th scope="row">7</th>
-                        <td>GLENFIDDICH 15yrs</td>
-                        <td>48,000</td>
+                        <td>GLENFIDDICH 18yrs</td>
+                        <td>85,000</td>
                       </tr>
                       <tr>
                         <th scope="row">8</th>
-                        <td>GLENFIDDICH 18yrs</td>
-                        <td>65,000</td>
+                        <td>HENNESY V.S</td>
+                        <td>45,000</td>
                       </tr>
                       <tr>
                         <th scope="row">9</th>
-                        <td>HENNESY V.S</td>
-                        <td>30,000</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">10</th>
                         <td>HENNESY V.S.O.P</td>
                         <td>65,000</td>
                       </tr>
                       <tr>
-                        <th scope="row">11</th>
+                        <th scope="row">10</th>
                         <td>HENNESY X.O</td>
-                        <td>140,000</td>
+                        <td>200,000</td>
                       </tr>
                       <tr>
-                        <th scope="row">12</th>
+                        <th scope="row">11</th>
                         <td>MARTEL BLUE</td>
                         <td>55,000</td>
                       </tr>
                       <tr>
-                        <th scope="row">13</th>
+                        <th scope="row">12</th>
                         <td>MARTEL V.S.S.D</td>
-                        <td>32,000</td>
+                        <td>38,000</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">13</th>
+                        <td>REMY MARTIN V.S.O.P</td>
+                        <td>47,000</td>
                       </tr>
                       <tr>
                         <th scope="row">14</th>
-                        <td>REMY MARTIN V.S.O.P</td>
-                        <td>45,000</td>
+                        <td>REMY MARTIN X.O</td>
+                        <td>200,000</td>
                       </tr>
                       <tr>
                         <th scope="row">15</th>
-                        <td>REMY MARTIN O.X</td>
-                        <td>140,000</td>
+                        <td>CLAYMORE</td>
+                        <td>10,000</td>
                       </tr>
                       <tr>
                         <th scope="row">16</th>
-                        <td>CLAYMORE</td>
-                        <td>8,000</td>
+                        <td>MONKEY SHOULDER</td>
+                        <td>27,000</td>
                       </tr>
                       <tr>
                         <th scope="row">17</th>
-                        <td>MONKEY SHOULDER</td>
-                        <td>25,000</td>
+                        <td>WILLIAM LAWSON</td>
+                        <td>12,5000</td>
                       </tr>
                       <tr>
                         <th scope="row">18</th>
-                        <td>WILLIAM LAWSON</td>
-                        <td>11,000</td>
+                        <td>IMPERIAL BLUE</td>
+                        <td>5,000</td>
                       </tr>
                       <tr>
                         <th scope="row">19</th>
-                        <td>JACK DANIEL (Single Barrel)</td>
-                        <td>25,000</td>
+                        <td>SEAGRAM</td>
+                        <td>5,500</td>
                       </tr>
                       <tr>
                         <th scope="row">20</th>
-                        <td>IMPERIAL BLUE</td>
-                        <td>5,000</td>
+                        <td>JACK DANIEL</td>
+                        <td>18,000</td>
+                      </tr>               
+                      <tr>
+                        <th scope="row">21</th>
+                        <td>JACK DANIEL (Single Barrel)</td>
+                        <td>37,000</td>
                       </tr>                     
                     </tbody>
                   </table>
@@ -409,26 +414,31 @@
                         </tr>
                         <tr>
                             <th scope="row">3</th>
-                            <td>MOET</td>
-                            <td>50,000</td>
+                            <td>MOET Brut</td>
+                            <td>68,000</td>
                         </tr>
                         <tr>
                             <th scope="row">4</th>
-                            <td>BLUE NUN GOLD</td>
-                            <td>15,000</td>
+                            <td>MOET Rose</td>
+                            <td>95,000</td>
                         </tr>
                         <tr>
                             <th scope="row">5</th>
+                            <td>BLUE NUN GOLD</td>
+                            <td>19,000</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6</th>
                             <td>BLUE NUN ROGUE</td>
                             <td>8,000</td>
                         </tr>
                         <tr>
-                            <th scope="row">6</th>
+                            <th scope="row">7</th>
                             <td>BELAIRE</td>
                             <td>45,000</td>
                         </tr>
                         <tr>
-                            <th scope="row">7</th>
+                            <th scope="row">8</th>
                             <td>BLUE NUN SILVER</td>
                             <td>7,000</td>
                         </tr>
@@ -460,7 +470,7 @@
                           <tr>
                             <th scope="row">1</th>
                             <td>OLMEGA TEQUILA</td>
-                            <td>15,000</td>
+                            <td>21,000</td>
                           </tr>
                         </tbody>
                       </table>
@@ -495,7 +505,7 @@
                             <tr>
                             <th scope="row">2</th>
                             <td>GORDON BIG</td>
-                            <td>3,000</td>
+                            <td>5,500</td>
                             </tr>
                             <tr>
                             <th scope="row">3</th>
@@ -670,7 +680,7 @@
                             <tr>
                             <th scope="row">5</th>
                             <td>CAMPARI MEDIUM</td>
-                            <td>11,000</td>
+                            <td>12,000</td>
                             </tr>                       
                         </tbody>
                         </table>
